fixed vertical align of text

--- a/theme.css
+++ b/theme.css
@@ -73,8 +73,8 @@ nav {
 .nav-link {
   color: #FFFFFF;
   font-size: 1.2rem;
-  margin-left: 2vw;
-  margin-right: 3.2vw;
+  margin-left: 2rem;
+  margin-right: 4rem;
   text-decoration: none
 }
 
@@ -82,7 +82,7 @@ nav {
   color: #FFFFFF;
   font-size: 1.2rem;
   float: right;
-  margin-right: 4vw;
+  margin-right: 4rem;
   text-decoration: none
 }
 
@@ -199,4 +199,9 @@ nav {
   height: 5rem;
   line-height: 2rem;
   background-color: rgba(0,0,0,.25);
+}
+
+#photography h3, span {
+  display: table-cell;
+  vertical-align: middle;
 }
